--- a/styles.css
+++ b/styles.css
@@ -23,18 +23,24 @@
     right: 0px;
     min-height: 100vh;
     min-width: 40vw;
+    width: max(500px, 40vw);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: black;
     opacity: 85%;
+    flex: 1 1 0;
   }
 
   .video {
     min-height: 100vh;
     max-width: 96%;
     object-fit: cover;
+  }
+
+  .video-container {
+    flex: 0 0 1;
   }
 
   .input {
@@ -47,7 +53,7 @@
   }
 
   label {
-    font-size: 13px;
+    font-size: 14px;
   }
   
   body {
@@ -64,7 +70,7 @@
   }
 
   .account {
-    font-size: 9px;
+    font-size: 11px;
   }
 
   input {
@@ -85,9 +91,9 @@
 
   button {
     margin-bottom: 15px;
-    height: 30px;
-    width: 100px;
-    font-size: 11px;
+    height: 40px;
+    width: 120px;
+    font-size: 14px;
   }
   
   p, h1, h2, h3, h4, h5, h6 {
